added last page

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -23,5 +23,5 @@
 
 </table>
 
-<button class="btn" (click)="showCartProducts()">Continue shopping</button>
-<button class="btn">Finalize</button>
+<button class="btn" (click)="changeView('main')">Continue shopping</button>
+<button class="btn" (click)="changeView('endForm')">Finalize</button>
