--- a/src/app/components/topNav/topNav.component.html
+++ b/src/app/components/topNav/topNav.component.html
@@ -4,6 +4,6 @@
   </div>
   <div class="col-sm-8" id="cart-details">
       Cart: {{numberOfProduct}} product(s), {{price}} zł
-    <button class="btn btn-sm" id="go-to-cart" (click)="showCartProducts()">Cart</button>
+    <button class="btn btn-sm" id="go-to-cart" (click)="changeView('cart')">Cart</button>
   </div>
 </div>
