--- a/src/app/components/main/app.component.html
+++ b/src/app/components/main/app.component.html
@@ -1,29 +1,4 @@
 <nav class="navbar bg-dark text-light">
-  <top-nav
-    [numberOfProduct]="cartNumberOfProducts"
-    [price]="cartPrice"
-  (view)="changeView($event)">
-  </top-nav>
+  <top-nav></top-nav>
 </nav>
-<div class="row" *ngIf="view === 'main'">
-  <div class="col-sm-2">
-    <left-menu
-      [categories]="categories"
-      (selectedCategories)="changeSelectedCategory($event)">
-    </left-menu>
-  </div>
-  <div class="col-sm-10">
-    <list-of-products
-      [products]="getProducts(selectedCategories, currentPage)"
-      [numberOfPages]="numberOfPages"
-      (currentPageEmitter)="changePage($event)"
-      (addedProduct)="addToCard($event)">
-    </list-of-products>
-  </div>
-</div>
-<cart *ngIf="view === 'cart'"
-      [cartProducts]="getCartProducts()"
-      (view)="changeView($event)"
-(productToRemove)="removeProductFromCard($event)">
-</cart>
-<end-form *ngIf="view=== 'endForm'"></end-form>
+<router-outlet>
