--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,7 +3,10 @@
     <left-menu (selectedCategories)="changeSelectedCategory($event)"></left-menu>
   </div>
   <div class="col-sm-10">
-    <list-of-products [selectedCategories]="selectedCategories">
+    <list-of-products
+      [selectedCategories]="selectedCategories"
+    [numberOfPages]="numberOfPages"
+    [currentPage]="1">
     </list-of-products>
   </div>
 </div>
