--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -4,20 +4,24 @@
 <table class="table">
   <thead>
   <tr>
-    <th>Quantity</th>
     <th>Product</th>
     <th>Price</th>
     <th>Value</th>
+    <th>Quantity</th>
     <th></th>
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let product of cartProducts">
-    <td>1</td>
-    <td>{{product.name}}</td>
-    <td>{{product.price}}</td>
-    <td>{{product.price}}</td>
-    <td><button class="btn" (click)="removeProduct(product)">Remove</button></td>
+  <tr *ngFor="let product of productFromCart">
+    <td>{{product.product.name}}</td>
+    <td>{{product.product.price}}</td>
+    <td>{{product.number * product.product.price}}</td>
+    <td>
+      <button class="btn btn-xs" (click)="changeQuantity(product.product, -1, product.number)">-</button>
+      <button class="btn btn-light btn-xs" disabled>{{product.number}}</button>
+      <button class="btn btn-xs" (click)="changeQuantity(product.product, 1, product.number)">+</button>
+    </td>
+    <td><button class="btn" (click)="removeProduct(product.product)">Remove</button></td>
   </tr>
   </tbody>
 
