--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,12 +1,17 @@
 <div class="row">
   <div class="col-sm-2">
-    <left-menu (selectedCategories)="changeSelectedCategory($event)"></left-menu>
+    <left-menu
+      (selectedCategories)="changeSelectedCategory($event)"
+      (priceFilter)="filter($event)"
+    ></left-menu>
   </div>
   <div class="col-sm-10">
     <list-of-products
-      [selectedCategories]="selectedCategories"
     [numberOfPages]="numberOfPages"
-    [currentPage]="1">
+    [currentPage]="currentPage"
+    [products] = "products"
+    [numberOfPages] = "numberOfPages"
+    (currentPageEmiter)="pagination($event)">
     </list-of-products>
   </div>
 </div>
