--- a/src/app/components/leftMenu/leftMenu.component.html
+++ b/src/app/components/leftMenu/leftMenu.component.html
@@ -1,5 +1,17 @@
 <ul class="categories list-group">
-  <li class="list-group-item" *ngFor="let category of categories" [class.selected]="selected.indexOf(category) > -1" (click)="onSelect(category)" >
+  <li class="list-group-item" *ngFor="let category of categories" [class.selected]="selected.indexOf(category) > -1"
+      (click)="onSelect(category)">
     {{category}}
   </li>
 </ul>
+<br>
+<!--price:-->
+<!--<div class="form-group row">-->
+  <!--<div class="col-lg-6">-->
+    <!--<input type="number" class="form-control" placeholder="from" [(ngModel)]="priceFrom" (blur)="onBlur(1)">-->
+  <!--</div>-->
+  <!--<div class="col-lg-6">-->
+    <!--<input type="number" class="form-control" placeholder="to" [(ngModel)]="priceTo" (blur)="onBlur(-1)">-->
+  <!--</div>-->
+<!--</div>-->
+
