--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -2,7 +2,9 @@
   <div class="col-sm-2">
     <left-menu
       (selectedCategories)="changeSelectedCategory($event)"
-      (priceFilter)="filter($event)"
+      (priceFromEmiter)="getPriceFrom($event)"
+      (priceToEmiter)="getPriceTo($event)"
+      (nameEmiter)="getName($event)"
     ></left-menu>
   </div>
   <div class="col-sm-10">
