--- a/src/app/components/endForm/endForm.component.html
+++ b/src/app/components/endForm/endForm.component.html
@@ -1,4 +1,4 @@
-<form>
+<form *ngIf="! isSuccess">
   <h1>Recipient</h1>
   <div class="form-group">
     <label for="nameAndSurname">Name and surname</label>
@@ -10,5 +10,10 @@
     <label for="address">Address</label>
     <input type="text" class="form-control" id="address" placeholder="Address" required="required" (keyup)="insertAddress($event)">
   </div>
-  <button class="btn" (click)="saveOrder()" routerLink="/dashboard">Finish order</button>
+  <button class="btn" (click)="saveOrder()">Finish order</button>
 </form>
+
+<div class="alert alert-success" *ngIf="isSuccess">
+  <strong>Success!</strong>
+</div>
+<button class="btn" routerLink="/dashboard" *ngIf="isSuccess">Go to dashboard</button>
