--- a/src/app/components/topNav/topNav.component.html
+++ b/src/app/components/topNav/topNav.component.html
@@ -3,7 +3,7 @@
     Sport shop
   </div>
   <div class="col-sm-8" id="cart-details">
-      Cart: {{numberOfProduct}} product(s), {{price}} zł
+      Cart: {{numberOfProduct}} product(s), {{price.toFixed(2)}} zł
     <button class="btn btn-sm" id="go-to-cart" routerLink="/cart">Cart</button>
   </div>
 </div>
