--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -27,5 +27,5 @@
 
 </table>
 
-<button class="btn" routerLink="/dashboard">Continue shopping</button>
-<button class="btn" routerLink="/end_form">Finalize</button>
+<button class="btn" (click)="changeView('dashboard')">Continue shopping</button>
+<button class="btn" (click)="changeView('endform')">Finalize</button>
