--- a/src/app/components/logout/logout.component.html
+++ b/src/app/components/logout/logout.component.html
@@ -1,6 +1,6 @@
 <div class="alert alert-success" *ngIf="status === 'success'">
   <strong>Success!</strong>
 </div>
-<button class="btn" routerLink="/dashboard" *ngIf="status === 'success'">Go to dashboard</button>
+<button class="btn" (click)="changeView('dashboard')" *ngIf="status === 'success'">Go to dashboard</button>
 <button class="btn" (click)="logout()" *ngIf="status !== 'success'">Logout</button>
 
