--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -2,7 +2,7 @@
   <strong>Success!</strong>
 </div>
 
-<button class="btn" routerLink="/dashboard" *ngIf="status === 'success'">Go to dashboard</button>
+<button class="btn" (click)="changeView('dashboard')" *ngIf="status === 'success'">Go to dashboard</button>
 
 
 <form *ngIf="status !== 'success'">
