--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -14,8 +14,10 @@
   <tbody>
   <tr *ngFor="let product of productFromCart">
     <td>{{product.product.name}}</td>
-    <td>{{(product.product.price).toFixed(2)}}</td>
-    <td>{{(product.number * product.product.price).toFixed(2)}}</td>
+    <td *ngIf="product.product.promotionPrice == undefined || product.product.promotionPrice === 0">{{(product.product.price).toFixed(2)}}</td>
+    <td *ngIf="product.product.promotionPrice != undefined && product.product.promotionPrice !== 0">{{(product.product.promotionPrice).toFixed(2)}}</td>
+    <td *ngIf="product.product.promotionPrice == undefined || product.product.promotionPrice === 0">{{(product.product.price * product.number).toFixed(2)}}</td>
+    <td *ngIf="product.product.promotionPrice != undefined && product.product.promotionPrice !== 0">{{(product.product.promotionPrice * product.number).toFixed(2)}}</td>
     <td>
       <button class="btn btn-xs" (click)="changeQuantity(product.product, -1, product.number)">-</button>
       <button class="btn btn-light btn-xs" disabled>{{product.number}}</button>
