--- a/src/app/components/productsContent/listOfProducts.component.html
+++ b/src/app/components/productsContent/listOfProducts.component.html
@@ -4,12 +4,36 @@
     <p class="product-description">{{product.description}}</p>
 
   </div>
-  <button class="btn btn-secondary add-to-cart" (click)="addToCart(product)">{{product.price.toFixed(2)}} zł</button>
+  <button type="button"class="btn btn-secondary details" data-toggle="modal" data-target="#promotion"
+          (click)="selectProduct(product)">Details</button>
+  <button class="btn btn-secondary add-to-cart" *ngIf="product.promotionPrice == undefined || product.promotionPrice === 0" (click)="addToCart(product)">{{product.price.toFixed(2)}} zł</button>
+  <button class="btn btn-secondary add-to-cart promotion" *ngIf="product.promotionPrice != undefined && product.promotionPrice !== 0" (click)="addToCart(product)">{{product.promotionPrice.toFixed(2)}} zł</button>
 </div>
-
 <div class="btn-group" id="pagination">
   <button class="btn" (click)="changePage(-1)"><</button>
   <button class="btn btn-light" disabled>{{currentPage}} / {{numberOfPages}}</button>
   <button class="btn" (click)="changePage(1)">></button>
 </div>
+
+<div id="promotion" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title"> Details of product {{currentProduct.name}}</h4>
+      </div>
+      <div class="modal-body">
+
+        <b>Price: </b>{{currentProduct.price}}<br>
+        <b>Description: </b> {{currentProduct.description}}<br>
+        <b>Category: </b> {{currentProduct.category}}<br>
+        <p *ngIf="currentProduct.promotionPrice != undefined && currentProduct.promotionPrice !== 0">
+          <b>Promotion: </b> {{currentProduct.promotionPrice}}
+        </p>
+        </div>
+      </div>
+    </div>
+  </div>
 
